--- a/applications/nrf_desktop/configuration/nrf52840_pca20041/app_ZRelease.conf
+++ b/applications/nrf_desktop/configuration/nrf52840_pca20041/app_ZRelease.conf
@@ -53,6 +53,7 @@ CONFIG_DESKTOP_VOLTAGE_TO_SOC_DELTA=10
 CONFIG_DESKTOP_USB_ENABLE=y
 
 CONFIG_DESKTOP_POWER_MANAGER_ENABLE=y
+CONFIG_DESKTOP_POWER_MANAGER_CONSTLAT=y
 
 CONFIG_DESKTOP_BLE_PEER_CONTROL=y
 CONFIG_DESKTOP_BLE_PEER_CONTROL_BUTTON=0x0007
